--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -30,7 +30,7 @@ name: Build and release if requested
 on:
   push:
     branches:
-      - main
+      - experimental
     paths:
       - "**.sh"
       - "**.cmd"
@@ -40,7 +40,7 @@ on:
       - "**.properties"
       - "**.xml"
 
-jobs:  
+jobs:
 
   elaborate-native-module:
     name: Elaborate native module (${{ matrix.os }} ${{ matrix.architecture }})
@@ -176,7 +176,7 @@ jobs:
           git config user.name "${{ github.event.head_commit.committer.name }}"
           git config user.email "${{ github.event.head_commit.committer.email }}"
           git pull origin ${{github.ref}} 
-          mvn -B release:prepare release:perform -Dproject_jdk_version=8 -DskipTests=true -Dgpg.passphrase=${{ secrets.gpg_passphrase }} -Dgpg.keyname=${{ secrets.gpg_key_id }} -Drepository.url=https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git --file ./java/sa-pom.xml
+          mvn -B release:prepare release:perform -Dproject_jdk_version=8 -DskipTests=true -Dgpg.passphrase=${{ secrets.gpg_passphrase }} -Dgpg.keyname=${{ secrets.gpg_key_id }} -Drepository.url=https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git --file ./java/pom.xml
         env:
           MAVEN_USERNAME: ${{ secrets.nexus_username }}
           MAVEN_PASSWORD: ${{ secrets.nexus_password }}
