--- a/java/pom.xml
+++ b/java/pom.xml
@@ -29,9 +29,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>org.burningwave</groupId>
+	<parent>
+    	<groupId>org.burningwave</groupId>
+    	<artifactId>jvm-driver-parent</artifactId>
+        <version>${revision}</version>
+    </parent>
+	
 	<artifactId>jvm-driver</artifactId>
-	<version>0.19.0-SNAPSHOT</version>
 	
 	<packaging>jar</packaging>
 	
@@ -106,6 +110,7 @@
 		<maven-scm-provider-gitexe.version>1.9.5</maven-scm-provider-gitexe.version>
 		<maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
 		<nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+		<slf4j.version>1.7.30</slf4j.version>
 	</properties>
 
 	<issueManagement>
@@ -128,7 +133,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/burningwave/jvm-driver</url>
-		<tag>jvm-driver-0.19.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<dependencies>
@@ -214,9 +219,15 @@
                                 <copy toDir="${project.build.directory}/classes/org/burningwave/jvm">
                                 	<fileset dir="${project.basedir}/../native/bin" />
                                 </copy>
-                                <copy file="${project.basedir}/../java-hook/bin/java/lang/ConsulterRetrieverForJDK9.class" tofile="${project.build.directory}/classes/org/burningwave/jvm/ConsulterRetrieverForJDK9.bwc" />
-                                <copy file="${project.basedir}/../java-hook/bin/java/lang/reflect/AccessibleSetterInvokerForJDK9.class" tofile="${project.build.directory}/classes/org/burningwave/jvm/AccessibleSetterInvokerForJDK9.bwc" />
-                                <copy file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class" tofile="${project.build.directory}/classes/org/burningwave/jvm/ClassLoaderDelegateForJDK9.bwc" />
+                                <copy file="${project.basedir}/../java-hook/bin/java/lang/ConsulterRetrieverForJDK9.class" 
+                                	tofile="${project.build.directory}/classes/org/burningwave/jvm/ConsulterRetrieverForJDK9.bwc" 
+                                />
+                                <copy file="${project.basedir}/../java-hook/bin/java/lang/reflect/AccessibleSetterInvokerForJDK9.class" 
+                                	tofile="${project.build.directory}/classes/org/burningwave/jvm/AccessibleSetterInvokerForJDK9.bwc" 
+                                />
+                                <copy file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class" 
+                                	tofile="${project.build.directory}/classes/org/burningwave/jvm/ClassLoaderDelegateForJDK9.bwc" 
+                                />
                             </target>
                         </configuration>
                     </execution>
