--- a/native/pom.xml
+++ b/native/pom.xml
@@ -26,17 +26,19 @@
 	AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
 	OR OTHER DEALINGS IN THE SOFTWARE.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.burningwave.parent</groupId>
-		<artifactId>jvm-driver</artifactId>
+		<groupId>org.burningwave</groupId>
+		<artifactId>jvm-driver-parent</artifactId>
 		<version>${revision}</version>
 	</parent>
-	
-	<groupId>org.burningwave</groupId>
-	<artifactId>jvm-driver-native</artifactId>
+
+	<artifactId>native</artifactId>
+	<name>native</name>
 
 	<properties>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
