--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.burningwave.parent</groupId>
-    <artifactId>jvm-driver</artifactId>
+    <groupId>org.burningwave</groupId>
+    <artifactId>jvm-driver-parent</artifactId>
     <version>${revision}</version>
 
     <properties>
