--- a/java/pom.xml
+++ b/java/pom.xml
@@ -36,7 +36,7 @@
     </parent>
 	
 	<artifactId>jvm-driver</artifactId>
-  <version>0.19.1-SNAPSHOT</version>
+  	<version>${revision}</version>
 	
 	<packaging>jar</packaging>
 	
