--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -42,82 +42,7 @@ on:
 
 jobs:
 
-  elaborate-native-module:
-    name: Elaborate native module (${{ matrix.os }} ${{ matrix.architecture }})
-    strategy:
-      fail-fast: false
-      max-parallel: 2
-      matrix:
-        os: [windows-latest, ubuntu-latest, macOS-latest]
-        java: [16]
-        architecture: [x86, x64]
-        exclude:
-          - os: macOS-latest
-            architecture: x86
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java }}
-          architecture: ${{ matrix.architecture }}
-      - if: startsWith(matrix.os, 'ubuntu') && startsWith(matrix.architecture, 'x86')
-        name: Set up C/C++ compiler
-        run: |
-          sudo apt update
-          sudo apt-get -y install doxygen vera++ zlib1g-dev libsnappy-dev \
-            g++-multilib
-      - if: startsWith(matrix.os, 'windows-latest') && startsWith(matrix.architecture, 'x86')
-        name: Set up C/C++ compiler
-        uses: egor-tensin/setup-mingw@v2
-        with:
-          platform: ${{ matrix.architecture }}
-      - uses: actions/checkout@v2
-      - name: Build native library
-        run: mvn -B clean compile -Dproject_jdk_version=${{ matrix.java }} -DskipTests=true --file ./native/pom.xml
-      - if: github.event_name == 'push' && (endsWith(github.event.head_commit.message, 'Releasing new version') || contains(github.event.head_commit.message, 'Generating external artifacts'))
-        name: Push native library
-        run: |
-          git config user.name "${{ github.event.head_commit.committer.name }}"
-          git config user.email "${{ github.event.head_commit.committer.email }}"
-          git pull origin ${{github.ref}}
-          git add .
-          git commit -am "Generated native library on ${{ matrix.os }} ${{ matrix.architecture }}" --allow-empty
-          git push
-          
-   
-  elaborate-java-hook-module:
-    name: Elaborate java hook module (${{ matrix.os }})
-    strategy:
-      fail-fast: true
-      max-parallel: 1
-      matrix:
-        architecture: [x64]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [16]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java }}
-          architecture: ${{ matrix.architecture }}
-      - if: startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macOS')
-        name: Change the permissions of the build script of external classes
-        run: chmod +x ./java-hook/compileExternalClasses.sh
-      - name: Build hook classes
-        run: mvn -B clean compile -Dproject_jdk_version=${{ matrix.java }} -DskipTests=true --file ./java-hook/pom.xml
-      - if: github.event_name == 'push' && (endsWith(github.event.head_commit.message, 'Releasing new version') || contains(github.event.head_commit.message, 'Generating external artifacts')) && startsWith(matrix.os, 'windows')
-        name: Push hook classes
-        run: |
-          git config user.name "${{ github.event.head_commit.committer.name }}"
-          git config user.email "${{ github.event.head_commit.committer.email }}"
-          git pull origin ${{github.ref}}
-          git add .
-          git commit -am "Generated hook classes" --allow-empty
-          git push
-          
+
 
   build-and-test-with-Java-8-and-later:
     name: Build and test (${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.java }})
@@ -175,8 +100,18 @@ jobs:
           echo "${{ secrets.gpg_private_key }}" | gpg --batch --import
           git config user.name "${{ github.event.head_commit.committer.name }}"
           git config user.email "${{ github.event.head_commit.committer.email }}"
-          git pull origin ${{github.ref}} 
+          git pull origin ${{github.ref}}
+          mv ./java/pom.xml ./java/temp-pom.xml
+          mv ./java/sa-pom.xml ./java/pom.xml
+          mv ./java/temp-pom.xml ./java/sa-pom.xml
+          git commit -am "Renamed poms for releasing"
+          git push          
           mvn -B release:prepare release:perform -Dproject_jdk_version=8 -DskipTests=true -Dgpg.passphrase=${{ secrets.gpg_passphrase }} -Dgpg.keyname=${{ secrets.gpg_key_id }} -Drepository.url=https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git --file ./java/pom.xml
+          mv ./java/pom.xml ./java/temp-pom.xml
+          mv ./java/sa-pom.xml ./java/pom.xml
+          mv ./java/temp-pom.xml ./java/sa-pom.xml
+          git commit -am "Released new version"
+          git push    
         env:
           MAVEN_USERNAME: ${{ secrets.nexus_username }}
           MAVEN_PASSWORD: ${{ secrets.nexus_password }}
