[maven-release-plugin] prepare release jvm-driver-0.19.5

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -31,7 +31,7 @@
 	
 	<groupId>org.burningwave</groupId>
 	<artifactId>jvm-driver</artifactId>
-  	<version>0.19.5-SNAPSHOT</version>
+  	<version>0.19.5</version>
 	
 	<packaging>jar</packaging>
 	
@@ -128,7 +128,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/burningwave/jvm-driver</url>
-		<tag>HEAD</tag>
+		<tag>jvm-driver-0.19.5</tag>
 	</scm>
 	
 	<dependencies>
