--- a/java/pom.xml
+++ b/java/pom.xml
@@ -36,7 +36,7 @@
     </parent>
 	
 	<artifactId>jvm-driver</artifactId>
-  	<version>   0.19.5-SNAPSHOT</version>
+  	<version>   0.19.5</version>
 	
 	<packaging>jar</packaging>
 	
