--- a/native/pom.xml
+++ b/native/pom.xml
@@ -49,7 +49,7 @@
 		<org.codehaus.mojo.option.spec-include-dir-one>${java.home}/include/</org.codehaus.mojo.option.spec-include-dir-one>
 		<org.codehaus.mojo.option.spec-include-dir-three>${java.home}/lib/</org.codehaus.mojo.option.spec-include-dir-three>
 		<org.codehaus.mojo.option.gcc-linker.flags>-fPIC -shared</org.codehaus.mojo.option.gcc-linker.flags>
-		<org.codehaus.mojo.option.gcc-linker.artifact-name>JavaNativeEnvironment</org.codehaus.mojo.option.gcc-linker.artifact-name>
+		<org.codehaus.mojo.option.gcc-linker.artifact-name>NativeExecutor</org.codehaus.mojo.option.gcc-linker.artifact-name>
 	</properties>
 	
 	<profiles>
@@ -167,8 +167,8 @@
 								<source>
 									<directory>${basedir}/src/main/c-c++</directory>
 									<fileNames>
-										<fileName>org/burningwave/jvm/JavaNativeEnvironment.cpp</fileName>
-										<fileName>org/burningwave/jvm/Environment.cpp</fileName>
+										<fileName>org/burningwave/jvm/NativeEnvironment.cpp</fileName>
+										<fileName>org/burningwave/jvm/NativeExecutor.cpp</fileName>
 									</fileNames>
 								</source>
 							</sources>
