--- a/java/pom.xml
+++ b/java/pom.xml
@@ -44,7 +44,7 @@
 	<description>
 		A driver to allow deep interaction with the JVM without any restrictions
 	</description>
-	<url>https://www.burningwave.org/</url>
+	<url>https://burningwave.github.io/jvm-driver/</url>
 
 	<licenses>
 		<license>
