--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: Burningwave JVM driver
 google_analytics: UA-154852845-4
+site.show_downloads: true
+show_downloads: true
