--- a/java/pom.xml
+++ b/java/pom.xml
@@ -171,7 +171,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>${project.basedir}</directory>
+				<directory>${project.basedir}/../</directory>
 				<includes>
 					<include>**LICENSE</include>
 				</includes>
