--- a/java/pom.xml
+++ b/java/pom.xml
@@ -29,7 +29,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>org.burningwave</groupId>
+	<parent>
+    	<groupId>org.burningwave</groupId>
+    	<artifactId>jvm-driver-parent</artifactId>
+        <version>${revision}</version>
+    </parent>
+	
 	<artifactId>jvm-driver</artifactId>
   	<version>1.0.4-SNAPSHOT</version>
 	
@@ -254,7 +259,7 @@
 						<exclude>java/</exclude>
 						<exclude>META-INF/maven/</exclude>
 						<exclude>**/*.c</exclude>
-						<exclude>**/*.cpp</exclude>						
+						<exclude>**/*.cpp</exclude>			
 						<exclude>**/*.h</exclude>
 					</excludes>
 					<archive>
