--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Burningwave JVM driver
+title: ToolFactory JVM driver
 google_analytics: UA-154852845-4
 show_downloads: false
