--- a/java-hook/pom.xml
+++ b/java-hook/pom.xml
@@ -1,15 +1,13 @@
 <!-- 
-	This file is part of Burningwave JVM driver.                                                                      
-	                                                                                                            
-	Author: Roberto Gentili                                                                                     
-	                                                                                                            
-	Hosted at: https://github.com/burningwave/jvm-driver                                                              
+	This file is part of ToolFactory JVM driver.                                                                      
+                                                                                                            
+	Hosted at: https://github.com/toolfactory/jvm-driver                                                              
 	                                                                                                            
 	- -                                                                                                          
 	                                                                                                            
 	The MIT License (MIT)                                                                                       
 	                                                                                                            
-	Copyright (c) 2019-2021 Roberto Gentili                                                                          
+	Copyright (c) 2019-2021 Luke Hutchison, Roberto Gentili                                                                          
 	                                                                                                            
 	Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
 	documentation files (the "Software"), to deal in the Software without restriction, including without        
@@ -30,7 +28,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-    	<groupId>org.burningwave</groupId>
+    	<groupId>io.github.toolfactory</groupId>
     	<artifactId>jvm-driver-parent</artifactId>
         <version>${revision}</version>
     </parent>
